Change webpack config

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build:dev": "webpack --env.NODE_ENV=develop",
+    "build:prod": "webpack --env.NODE_ENV=production",
     "start": "webpack-dev-server --port 9898 --host 0.0.0.0 --config webpack.config.js --hot --watch --debug --color --devtool eval-source-map --output-pathinfo --inline --progress --history-api-fallback"
   },
   "devDependencies": {
