--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build:dev": "webpack --env.NODE_ENV=develop",
     "build:prod": "webpack --env.NODE_ENV=production",
-    "start": "webpack-dev-server --port 9898 --host 0.0.0.0 --config webpack.config.js --hot --watch --debug --color --devtool eval-source-map --output-pathinfo --inline --progress --history-api-fallback"
+    "start": "webpack-dev-server --port 9898 --host 0.0.0.0 --config webpack.config.js --env.NODE_ENV=develop --hot --watch --debug --color --devtool eval-source-map --output-pathinfo --inline --progress --history-api-fallback"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
