--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@types/react-dom": "^16.0.4",
     "@types/react-router": "^4.0.22",
     "@types/react-router-dom": "^4.2.4",
+    "@types/react-transition-group": "^2.0.9",
     "classnames": "^2.2.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.3.1",
     "smooth-scroll": "^12.1.5",
     "typescript": "^2.6.2"
   }
